welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: not found: value ||
  if (a>=13 && a<=19)||(b>=13 && b<=19){
                     ^loneTeen:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a>=13 && a<=19)||(b>=13 && b<=19){
  ^